--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "events": "^1.1.1",
     "geocoder": "^0.2.2",
     "protobufjs": "^5.0.1",
-    "request": "^2.73.0"
+    "request": "^2.73.0",
+    "gpsoauthnode": "^0.0.5"
   },
   "devDependencies": {},
   "scripts": {
