--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node-pogo-signature": "^2.0.0",
     "protobufjs": "^5.0.1",
     "request": "^2.73.0",
-    "s2geometry-node": "^1.3.0",
+    "s2-geometry": "^1.2.7",
     "tape": "^4.6.0"
   },
   "scripts": {
